Added deployment profiles

--- a/Evento.Web/Views/Home/Index.cshtml
+++ b/Evento.Web/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Vilnius University</h1>
+    <h2>Programming in the Cloud Course</h2>
+    <p>P'Ship Prof., Dr. Rimantas Kybartas</p>
+    @* <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p> *@
 </div>
