--- a/Evento.Web/Views/User/Create.cshtml
+++ b/Evento.Web/Views/User/Create.cshtml
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="RoleId" class="control-label"></label>
-                <input asp-for="RoleId" class="form-control" />
+                <select asp-for="RoleId" class="form-control" asp-items="ViewBag.Roles" ></select>
                 <span asp-validation-for="RoleId" class="text-danger"></span>
             </div>
             <div class="form-group">
